--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
     <meta name='viewport' content='with=device-width, initial-scale=1'>
   </head>
   <body>
-    <my-app> Loading... </my-app>
+    <notificator-component> Loading... </notificator-component>
   </body>
 </html>
