--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta charset='UTF-8'>
     <meta name='viewport' content='with=device-width, initial-scale=1'>
   </head>
-  <body>
+  <body style="margin: 0 auto;">
     <notificator-component> Loading... </notificator-component>
   </body>
 </html>
